// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  disabled={false}
  inputRef={
    Object {
      "current": null,
    }
  }
  leftIcon="search"
  minimal={true}
  onChange={[Function]}
  rightElement={
    <CustomLoader
      isSearching={false}
    />
  }
  type="search"
/>
`;

exports[`should render correctly with default value 1`] = `
<div
  defaultValue="foo"
  disabled={false}
  inputRef={
    Object {
      "current": null,
    }
  }
  leftIcon="search"
  minimal={true}
  onChange={[Function]}
  rightElement={
    <CustomLoader
      isSearching={false}
    />
  }
  type="search"
/>
`;
